chore: release axstudio 1.0.7
